<resources>
    <string name="yes">Yes</string>
    <string name="app_name">E_Debt_Book</string>
    <string name="sign_up">Sign Up</string>
    <string name="back">Back</string>
    <string name="title_activity_customer_main">Customer Main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="enter_customer_phone_to_search">Phone to search</string>
    <string name="total_lend_amount">Total Lend Amount :</string>
    <string name="collected">Collected</string>
    <string name="remaining">Remaining</string>
    <string name="english">English</string>
    <string name="change_adress">Change Address</string>
    <string name="createCustomerFromMarketSelectDone">Done</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_change_language">Change Language</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_aboutus">About Us</string>
    <string name="number_verification_enter_your_number_text_view">Enter your verification code please</string>
    <string name="number_verification_send_code_button">Send Code</string>
    <string name="number_verification_verify_button">Verify</string>
    <string name="number_verification_later_button">Later</string>
    <string name="number_verification_hint_code_textview">Code</string>
    <string name="title_activity_cotumer_main">Cutomer Main</string>
    <string name="title_activity_customer_main2">Customer Main</string>
    <string name="emaill">Email icon</string>
    <string name="user_infos">User Infos :</string>
    <string name="total_debts">Total Debts :</string>
    <string name="number_of_customers">Number of customers :</string>
    <string name="list_of_debts">List of Debts :</string>
    <string name="add_debt">Add Debt :</string>
    <string name="debts_details">Debts Details</string>
    <string name="date_of_loan">Date of loan :</string>
    <string name="add_new_debt">Add New Debt</string>
    <string name="loan_amount">Loan amount</string>
    <string name="my_customers">My Customers</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="account_icon">account_icon</string>
    <string name="done">Done</string>
    <string name="description">Description :</string>
    <string name="print">Print</string>
    <string name="customer">Customer :</string>
    <string name="due_date">Due Date :</string>
    <string name="todo">TODO</string>
    <string name="products_list">Products List :</string>
    <string name="edit">Edit</string>
    <string name="amount">Amount :</string>
    <string name="delete">Delete</string>
    <string name="empty_text" translatable="false" />
    <string name="price">Price</string>
    <string name="full_name">Full Name</string>
    <string name="add_product">Add Product</string>
    <string name="produce_name">Product Name</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="payment_due_date">Payment Due Date :</string>
    <string name="save">Save</string>


    <string name="product_name">Product Name</string>
    <string name="last_name">Last Name</string>
    <string name="my_debts">My Debts</string>
    <string name="password">Password</string>
    <string name="old_phone_number">Old Phone Number</string>
    <string name="new_phone_number">New Phone Number</string>
    <string name="iban_number">Iban Number</string>
    <string name="address">Address</string>
    <string name="login">Login</string>
    <string name="who">who</string>
    <string name="the_smartest_one_is">the smartest one is :</string>
    <string name="market">Market</string>
    <string name="log_in">LOG IN</string>
    <string name="confirm_your_password">Confirm your Password</string>
    <string name="add_customer">ADD CUSTOMER</string>
    <string name="edit_my_info">EDIT MY INFO</string>
    <string name="log_out">LOG OUT</string>
    <string name="date">Date</string>
    <string name="current_phone">Current Phone number</string>
    <string name="new_phone">New Phone</string>
    <string name="sign_out">Sign Out</string>
    <string name="add_customer_name">Name</string>
    <string name="add_customer_last_name">Last Name</string>
    <string name="add_customer_phone">Phone</string>
    <string name="add_customer_email">Email</string>
    <string name="market_profile_name">Name</string>
    <string name="market_profile_email">Email</string>
    <string name="market_profile_password">Password</string>
    <string name="market_profile_iban_number">Iban Number</string>
    <string name="market_profile_address">Address</string>
    <string name="change_name">Change Name</string>
    <string name="actual_name">Actual Name</string>
    <string name="actual_address">Actual Address</string>
    <string name="security_and_login_information">Security and Login Information</string>
    <string name="change_email">Change Email</string>
    <string name="actual_email">Actual Email</string>
    <string name="change_password">Change Password</string>
    <string name="change_phone">Change Phone number</string>
    <string name="actual_phone">Actual Phone</string>
    <string name="gallery">Gallery</string>
    <string name="_90">+90</string>
    <string name="menu_change_password">Change Language</string>
    <string name="customer_no_points">Customer</string>
    <string name="new_email">New Email</string>
    <string name="debts_of_a_customer">list of debts </string>
    <string name="the_selected_language">English</string>
    <string name="Turkish">Turkish</string>
    <string name="German">German</string>
    <string name="text_of_about_us_1">Not everywhere in the world people have access to proper banking services, not all stores and companies can afford the bank quotes for commissions-especially small and local companies, for using the POS machines, etc., and banks do not give everyone credit cards that easily! But fortunately, the internet service is spreading very exponentially, so instead of using the old-style debt books; a note book that contains details of the debts of a person to the store, manually, where a small flaw, a little dot could make a huge difference and even possibly open a way for mistrust and problems in local societies, the new technologies must provide a new solution for this problem.</string>
    >
    <string name="text_of_about_us_2"> And from this approach came our inspiration; to provide a digitalized, easy-to-use platform "application" that helps both market owners to organize the debt within a digital platform in a modern way in which, all the records are kept and available at the same time for both the costumer and the market owners -from anywhere and at any time!- , ease the process, save time and resources. Simply organize and manage everything with transparency and efficiency, since the phone is a device that almost everyone has, and you do not have to have many books! It also allows costumers of a store "users" to access the details of their debts to each store, and choose a method to pay, notify them for upcoming paying dates, and also make them able to pay them via some defined easier and cheaper methods.  </string>
    <string name="No">No</string>
    <string name="ask_to_add_loan_to_calendar">Do you want to add a reminder of the Due payment date in your calender?</string>
    <string name="Loan_recieving_time">Loan recieving time!</string>
    <string name="you_have_lend_money_to">You have lend money to</string>
    <string name="Error">Error!</string>
    >
</resources>