<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_market_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_market_profile"
            android:icon="@drawable/account_icon1"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_market_settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/priority_icon"
            android:title="@string/menu_aboutus" />
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/signout_icon"
            android:title="Sign out" />
    </group>
</menu>