<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_customer_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_customer_edit_profile"
            android:icon="@drawable/edit_icon"
            android:title="@string/menu_edit_profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_change_language"
            android:icon="@drawable/language_icon"
            android:title="@string/menu_change_language" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/priority_icon"
            android:title="@string/menu_aboutus" />
    </group>
</menu>