<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_market_home">

    <fragment
        android:id="@+id/nav_market_home"
        android:name="com.example.e_debt_book.ui.marketHome.MarketHomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_market_home" />

    <fragment
        android:id="@+id/nav_market_profile"
        android:name="com.example.e_debt_book.ui.marketProfile.MarketProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_market_profile" />

    <fragment
        android:id="@+id/nav_market_settings"
        android:name="com.example.e_debt_book.ui.MarketSettings.MarketSettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_setting_market" >
        <action
            android:id="@+id/action_nav_market_settings_to_fragment_change_password3"
            app:destination="@id/fragment_change_password"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/nav_market_settings" />
    </fragment>

    <fragment
        android:id="@+id/nav_aboutus"
        android:name="com.example.e_debt_book.ui.aboutUs.AboutUsFragment"
        android:label="@string/menu_aboutus"
        tools:layout="@layout/fragment_aboutus" />

    <fragment
        android:id="@+id/fragment_change_password"
        android:name="com.example.e_debt_book.ui.changePassword.ChangePasswordFragment"
        android:label="@string/menu_change_language"
        tools:layout="@layout/fragment_change_password" >
        <action
            android:id="@+id/action_fragment_change_password_to_nav_market_settings"
            app:destination="@id/nav_market_settings"
            app:exitAnim="@android:anim/slide_out_right" />
    </fragment>


</navigation>