<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addDebt.AddDebtFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/selectedCustomerPhone"
                    android:layout_width="360dp"
                    android:layout_height="50dp"
                    android:autofillHints=""
                    android:background="#F3F3F3"
                    android:hint="@string/enter_customer_phone_to_search"
                    android:inputType="number"
                    android:paddingLeft="15dp"
                    android:paddingTop="15dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="15dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/tertiary_text_light"
                    android:textSize="20sp"
                    android:textStyle="normal|italic"
                    tools:ignore="TextFields"
                    android:paddingStart="15dp"
                    android:paddingEnd="0dp" />

                <ImageButton
                    android:id="@+id/customerSelectButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#F3F3F3"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/search_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="0dp"
                    android:paddingTop="0dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="0dp"
                    android:paddingStart="0dp"
                    android:paddingEnd="10dp">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/todo"
                        app:srcCompat="@drawable/account_icon" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="285dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/full_name"
                        android:textColor="@android:color/black" />

                    <EditText
                        android:id="@+id/customerNameInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/merienda"
                        android:hint="@string/name"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:paddingLeft="0dp"
                        android:paddingTop="15dp"
                        android:paddingRight="0dp"
                        android:paddingBottom="15dp"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="@android:color/black" />

                    <EditText
                        android:id="@+id/customerEmailInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/merienda"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:textColor="@android:color/black"
                        android:importantForAutofill="no" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/phone"
                        android:textColor="@android:color/black" />

                    <EditText
                        android:id="@+id/customerPhoneInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/merienda"
                        android:hint="@string/phone"
                        android:importantForAutofill="no"
                        android:inputType="text|phone"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:textColor="@android:color/black" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#8ecde8"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="5dp"
                android:text="@string/loan_amount"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/loanAmountInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:editable="false"
                android:hint="@string/loan_amount"
                android:inputType="numberDecimal"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="10dp"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#8ecde8"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="10dp"
                android:text="@string/description"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/descriptionInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="0dp"
                android:paddingBottom="10dp"
                android:textSize="18sp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="170dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/date_of_loan"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/dateOfLoanInput"
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:hint="@string/date_of_loan"
                    android:importantForAutofill="no"
                    android:inputType="date|text"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/dateOfLoanSelect"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@android:drawable/ic_menu_today" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="170dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/payment_due_date"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/dueDateInput"
                    android:layout_width="180sp"
                    android:layout_height="50dp"
                    android:hint="@string/payment_due_date"
                    android:importantForAutofill="no"
                    android:inputType="date|text"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/dueDateSelect"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@android:drawable/ic_menu_today" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#8ecde8"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="10dp"
                android:text="@string/products_list"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                >

                <EditText
                    android:id="@+id/itemNameInput"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/produce_name"
                    android:inputType="text"
                    android:importantForAutofill="no" />

                <EditText
                    android:id="@+id/itemPriceInput"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/price"
                    android:inputType="number"
                    android:importantForAutofill="no" />

                <Button
                    android:id="@+id/addProductButton"
                    android:layout_width="110dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="#005B9F"
                    android:text="@string/add_product"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <ListView
                android:id="@+id/productsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cacheColorHint="@android:color/black"
                android:divider="@android:color/black"
                android:dividerHeight="3dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/addDebtButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f24405"
                android:text="@string/add_debt"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>