<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.aboutUs.AboutUsFragment">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF865A"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="311dp"
                    android:layout_height="141dp"
                    android:layout_weight="1"
                    android:alpha="0.85"
                    android:src="@drawable/icon" />

                <TextView
                    android:id="@+id/aboutUsTextView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/merienda"
                    android:paddingTop="10dp"
                    android:paddingEnd="0dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="0dp"
                    android:text="@string/text_of_about_us_1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF7340"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="#BCE9FA" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF865A"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="311dp"
                    android:layout_height="141dp"
                    android:layout_weight="1"
                    android:alpha="0.85"
                    android:src="@drawable/icon" />

                <TextView
                    android:id="@+id/aboutUsTextView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/merienda"
                    android:paddingTop="10dp"
                    android:paddingEnd="0dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="5dp"
                    android:text="@string/text_of_about_us_2"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>